update equipment slider

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -204,11 +204,17 @@
 	z-index:0;
 	position:absolute;
 	top:0;
-	left:0;
-	width:100%;
 	height:100%;
 	background:$blue;
 	overflow:hidden;
+}
+.equipment-slider_left{
+	left:0;
+	width:50%;
+}
+.equipment-slider_right{
+	right:0;
+	width:50%;
 }
 .equipment-slider_slide{
 	position:relative;
@@ -217,8 +223,8 @@
 	img{
 		display:block;
 		position:relative;
-		width:100%;
-		height:100%;
+		width:100% !important;
+		height:100% !important;
 		object-fit: cover;
 		object-position: bottom center;
 		@include opacity(0.4);
@@ -277,22 +283,22 @@
 		height:100%;
 		background:$blue;
 	}
+	.slick-slide{
+		height:100%;
+		@include opacity(0.3);
+		@include transition(opacity 1.2s $easeOutExpo);
+		img{
+			display:block;
+			width:auto;
+			height:100%;
+		}
+	}
+	.slick-current{
+		@include opacity(1);
+	}
 }
 .slick-slider, .slick-track, .slick-list {
 	height:100%;
-}
-.slick-slide{
-	height:100%;
-	@include opacity(0.3);
-	@include transition(opacity 1.2s $easeOutExpo);
-	img{
-		display:block;
-		width:auto;
-		height:100%;
-	}
-}
-.slick-current{
-	@include opacity(1);
 }
 .slider-btns{
 	z-index:2;
