--- a/css/main.css
+++ b/css/main.css
@@ -975,11 +975,19 @@ footer .footer-bottom_links a:hover {
   z-index: 0;
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
   height: 100%;
   background: #1d4485;
   overflow: hidden;
+}
+
+.equipment-slider_left {
+  left: 0;
+  width: 50%;
+}
+
+.equipment-slider_right {
+  right: 0;
+  width: 50%;
 }
 
 .equipment-slider_slide {
@@ -990,8 +998,8 @@ footer .footer-bottom_links a:hover {
 .equipment-slider_slide img {
   display: block;
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 100% !important;
+  height: 100% !important;
   object-fit: cover;
   object-position: bottom center;
   opacity: 0.4;
@@ -1057,12 +1065,7 @@ footer .footer-bottom_links a:hover {
   height: 100%;
   background: #1d4485;
 }
-
-.slick-slider, .slick-track, .slick-list {
-  height: 100%;
-}
-
-.slick-slide {
+.plaza .slick-slide {
   height: 100%;
   opacity: 0.3;
   filter: alpha(opacity=30);
@@ -1072,15 +1075,18 @@ footer .footer-bottom_links a:hover {
   -o-transition: opacity 1.2s cubic-bezier(0.19, 1, 0.22, 1);
   transition: opacity 1.2s cubic-bezier(0.19, 1, 0.22, 1);
 }
-.slick-slide img {
+.plaza .slick-slide img {
   display: block;
   width: auto;
   height: 100%;
 }
-
-.slick-current {
+.plaza .slick-current {
   opacity: 1;
   filter: alpha(opacity=100);
+}
+
+.slick-slider, .slick-track, .slick-list {
+  height: 100%;
 }
 
 .slider-btns {
