--- a/css/main.css
+++ b/css/main.css
@@ -239,6 +239,14 @@ UTILITY
   padding-bottom: 60px;
 }
 
+.pad-bottom_90 {
+  padding-bottom: 60px;
+}
+
+.pad-bottom_120 {
+  padding-bottom: 120px;
+}
+
 .pad-right_20 {
   padding-right: 20px;
 }
@@ -1123,11 +1131,20 @@ footer .footer-bottom_links a:hover {
 .apply-cta {
   background: #f9f8f6;
   background-size: auto 100%;
+  padding: 120px 0 200px 0;
 }
 .apply-cta p {
   max-width: 550px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.best-fleets {
+  background: #1d4485;
+  padding-bottom: 60px;
+}
+.best-fleets img {
+  margin-top: -90px;
 }
 
 /*# sourceMappingURL=main.css.map */
