--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -6,67 +6,62 @@
 	background:$blue;
 	color:white;
 	width:100%;
-	height: calc(100vw * (9/16));
-  max-height:70vh;
-  min-height:680px;
+	height: calc(100vh - 60px);
+	min-height:750px;
+	.hero-overlay{
+		z-index:4;
+		position:absolute;
+		top:0;
+		left:0;
+		width:100%;
+		height:50%;
+		background:linear-gradient(180deg, $blue_dark 0%, rgba(0,0,0,0) 50%);
+		@include opacity(0.7);
+	}
+	.map-overlay{
+		img{
+			z-index:4;
+			position:absolute;
+			bottom:0;
+			left:0;
+			display:block;
+			width:100%;
+			max-width:1920px;
+			height:auto;
+			@include opacity(0.5);
+		}
+	}
 	.hero-copy{
-		z-index:0;
+		z-index:4;
 		position:relative;
 		width:100%;
 		height:100%;
-		padding-top:110px;
+		padding-top:60px;
+		text-align:center;
 	}
 	.hero-copy_inner{
-		max-width:500px;
 		color:white;
-	}
-	.hero-menu{
-		.hero-menu_wrap-links{
-			a{
-				z-index:0;
-				position:relative;
-				display:block;
-				height:50px;
-				line-height:48px;
-				margin-bottom:5px;
-				font-size:17px;
-				font-weight:600;
-				letter-spacing:-0.5px;
-				padding:0 30px 0 10px;
-				color:$blue;
-				background:white;
-				border:1px solid rgba(75,85,120,0.4);
-				border-radius:3px;
-				box-shadow:0 8px 16px 0 rgba(0,0,0,0);
-				cursor:pointer;
-				@include transition(box-shadow 0.8s $easeOutExpo);
-				&:hover{
-					z-index:1;
-					box-shadow:0 10px 30px 0 rgba(0,0,0,0.5);
-				}
-				i{
-					color:$orange;
-					font-size:19px;
-					margin-left:10px;
-					vertical-align:-2px;
-				}
-				.menu-icon{
-					width:30px;
-					vertical-align:-3px;
-					margin-right:3px;
-				}
-			}
+		.button-group{
+			margin-top:30px;
 		}
 	}
-
-	.hero-video{
-		z-index:0;
+	.hero-play-btn{
+		z-index:6;
 		position:absolute;
 		top:0;
 		right:0;
 		width:50%;
 		height:100%;
+	}
+	.hero-video{
+		z-index:0;
+		position:absolute;
+		top:0;
+		right:0;
+		width:100%;
+		height:100%;
 		overflow:hidden;
+		background:#222;
 		video, img{
 			position:absolute;
 			top:0;
@@ -74,283 +69,492 @@
 			width:100%;
 			height:100%;
 			object-fit: cover;
-			object-position: center;
-      opacity:1;
+			object-position:center;
+			@include opacity(0.6);
 		}
+	}
+}
+.scroll-cue{
+	z-index:20;
+	position:absolute;
+	bottom:5px;
+	left:50%;
+	@include transform(translate3d(-50%,0,0));
+	height:60px;
+  font-size:13px;
+  font-weight:700;
+  text-transform:uppercase;
+  @include transition(all 1s $easeOutExpo);
+  &:after{
+  	position:relative;
+  	display:block;
+  	content:"";
+  	width:1px;
+  	height:60px;
+  	margin:15px auto 0 auto;
+  	background:$orange;
+  	@include transition(all 1s 0.2s $easeOutExpo);
+  	animation: scrollCue 3s infinite;
+  }
+  &.active{
+    @include transform(translateY(-30px));
+    @include opacity(0);
+    &:after{
+      height:0;
+    }
+  }
+}
+
+@keyframes scrollCue {
+  0% {
+    @include transform(translateY(0));
+    @include opacity(1);
+  }
+  10% {
+    @include transform(translateY(30px));
+    @include opacity(0);
+  }
+  20% {
+    @include transform(translateY(-50px));
+    @include opacity(0);
+  }
+  30% {
+    @include transform(translateY(0));
+    @include opacity(1);
+  }
+  80% {
+  	@include transform(translateY(0));
+    @include opacity(1);
+  }
+}
+
+// ———————————————————————————————————
+// CAREER OPTIONS 
+// ———————————————————————————————————
+.career-options{
+	position:relative;
+	padding:70px 0 120px 0;
+	--card_width:400px;
+	--card_height:360px;
+	--card_gap:20px;
+	.map-overlay{
+		img{
+			z-index:0;
+			position:absolute;
+			top:0;
+			left:0;
+			display:block;
+			width:100%;
+			max-width:1920px;
+			height:auto;
+			@include opacity(0);
+		}
+	}
+	.card-slider .card{
+		z-index:2;
+		position:relative;
+	  width:var(--card_width);
+	  height:var(--card_height);
+	  background: linear-gradient(180deg, $blue 0%, $blue_light 150%);
+	  border-radius:10px;
+	  color:white;
+	  .card_image{
+	  	z-index:1;
+	    display:block;
+	    position:absolute;
+	    bottom:-40px;
+	    right:-10px;
+	    width:75%;
+	    height:auto;
+	    border-radius:10px;
+	    @include transform(scale(1) rotate(-8deg));
+	    @include transition(all 0.8s $easeOutExpo);
+	    will-change: transform;
+	    overflow:hidden;
+	     img{
+		  	display:block;
+		  	width:100%;
+		  	height:auto;
+		  }
+	  }
+	  &:hover{
+	  	.card_image{
+		    @include transform(translateX(10px) scale(0.85) rotate(-5deg));
+		  }
+		  .card-circle{
+			  @include transform(scaleX(1));
+			  @include opacity(1);
+			}
+	  }
+	}
+	.card-slider .card_text{
+	  z-index:2;
+	  position:absolute;
+	  top:0;
+	  left:0;
+	  width:100%;
+	  padding:50px;
+	  color:white;
+	  h4{
+	    margin-bottom:5px;
+	  }
+	}
+	.card_link{
+		z-index:2;
+		position:absolute;
+		bottom:50px;
+		left:50px;
+		.line-btn{
+			font-size:13px;
+		}
+	}
+}
+.career-options_text-block{
+	img{
+		margin:-30px 0 0 -300px;
 	}
 }
 
-@media(max-width:1080px){
-	.hero{
-		height: auto;
-	  max-height:100%;
-	  min-height:auto;
-	  .hero-copy{
-			display:block;
-			width:50%;
-			height:auto;
-			padding:170px 0 60px 0;
-		}
-		.hero-copy_inner{
-			max-width:400px;
-		}
-		.hero-menu{
-			.hero-menu_wrap-links{
-				a{
-					height:45px;
-					line-height:43px;
-					margin-bottom:5px;
-					font-size:15px;
-					letter-spacing:-0.5px;
-					padding:0 15px 0 5px;
-					color:$blue;
-					background:white;
-					border:1px solid rgba(75,85,120,0.4);
-					border-radius:3px;
-					box-shadow:0 8px 16px 0 rgba(0,0,0,0);
-					cursor:pointer;
-					i{
-						color:$orange;
-						font-size:17px;
-						margin-left:7px;
-						vertical-align:-2px;
-					}
-					.menu-icon{
-						width:30px;
-						vertical-align:-3px;
-						margin-right:0px;
-					}
-				}
-			}
-		}
-	}
-}
-@media(max-width:910px){
-	.hero{
-	  .hero-copy{
-			width:100%;
-			padding:150px 0 40px 0;
-		}
-		.hero-copy_inner{
-			margin:0 auto;
-      text-align:center;
-    }
-    .hero-menu{
-      display:inline-block;
-      width:auto;
-    }
-	}
-	.hero .hero-video{
-		position:relative;
-		width:100%;
-		height: calc(100vw * (9/16));
-	}
-}
+
 
 // ———————————————————————————————————
 // BENEFITS
-// ——————————————————————————————————— 
-.benefits{
-	background:url("../img/map-bg-1.jpg") no-repeat bottom left 40vw;
-	background-size:1200px auto;
-}
 // ———————————————————————————————————
-// DRIVER STORIES
-// ——————————————————————————————————— 
-.driver-stories{
-	background:$gray_light;
-	.driver-stories_image{
-		img{
-	    display:block;
-	    width:100%;
-	    height:auto;
-	  }
-	}
-	.driver-stories_image-bottom{
-		margin-top:15px;
-		.driver-stories_image-image{
-			&:first-child{
-				margin-right:15px;
+.benefits{
+	position:relative;
+	padding:120px 0;
+	background:$blue;
+	background-size:auto 100%;
+	background-size:auto 100%;
+	color:white;
+	.benefit{
+		padding-left:25px;
+		border-left:1px solid rgba(255,255,255,0.25);
+		&:last-child{
+			margin-bottom:0;
+		}
+		p{
+			color:rgba(255,255,255,1);
+		}
+		a{
+			font-style:italic;
+			color:white;
+			text-decoration:underline;
+			@include transition(color 0.6s $easeOutExpo);
+			&:hover{
+				color:$orange;
 			}
 		}
+		img{
+			display:block;
+			width:100%;
+			max-width:220px;
+			margin-top:5px;
+		}
 	}
-
 }
+.benefits-map{
+	z-index:3;
+	position:absolute;
+	top:-240px;
+	right:0;
+	width:1280px;
+	@media(min-width:1280px){
+		width:1280px;
+	}
+	@media(min-width:1920px){
+		width:1440px;
+	}
+	img{
+		display:block;
+		width:100%;
+		height:auto;
+		@include opacity(1);
+	}
+}
+.text-block--floating{
+	padding:60px;
+	background:$blue;
+	border-radius:10px;
+}
+
 // ———————————————————————————————————
 // EQUIPMENT
 // ——————————————————————————————————— 
 .equipment{
 	position:relative;
-	background:$blue;
-  height: calc(100vw * (9/16));
-  max-height:60vh;
-  min-height:640px;
-  &.active{
-  	.equipment-text{
-  		@include opacity(0);
-  	}
-  	.equipment-slider_slide img{
-			@include opacity(1);
-	  }
-  }
-}
-.equipment-text{
-	z-index:1;
-	position:absolute;
-	left:0;
-	top:50%;
-	@include transform(translateY(-50%));
-	@include transition(opacity 0.8s $easeOutExpo);
-}
-.equipment-slider{
-	z-index:0;
-	position:absolute;
-	top:0;
-	height:100%;
-	background:$blue;
-	overflow:hidden;
-}
-.equipment-slider_left{
-	left:0;
-	width:50%;
-}
-.equipment-slider_right{
-	right:0;
-	width:50%;
-}
-.equipment-slider_slide{
-	position:relative;
-	width:100%;
-	height:100%;
-	img{
-		display:block;
+	background:url("../img/benefits-bg.jpg") no-repeat left center;
+	background-size:auto 100%;
+	height:60vh;
+	min-height:650px;
+	.equipment_text{
+		z-index:2;
 		position:relative;
-		width:100% !important;
-		height:100% !important;
-		object-fit: cover;
-		object-position: bottom center;
-		@include opacity(0.4);
-		@include transition(opacity 0.8s $easeOutExpo);
+		color:white;
+		text-align:center;
+		p{
+			margin-top:5px;
+			color:rgba(255,255,255,1);
+		}
+	}
+	.equipment_highlights{
+		margin-top:40px;
+		.column{
+			padding:0 25px;
+			border-right:1px solid rgba(255,255,255,0.3);
+			&:last-child{
+				border:none;
+			}
+		}
+	}
+	.equipment_video{
+		z-index:0;
+		position:absolute;
+		top:0;
+		right:0;
+		width:100%;
+		height:100%;
+		overflow:hidden;
+		background:#222;
+		video, img{
+			position:absolute;
+			top:0;
+			left:0;
+			width:100%;
+			height:100%;
+			object-fit: cover;
+			object-position:center;
+			@include opacity(0.6);
+		}
 	}
 }
-.equipment-slider_btns{
-	z-index:2;
-	position:absolute;
-	left:50%;
-	@include transform(translateX(-50%));
-	bottom:0px;
-	padding:10px 10px 0 10px;
-	background:white;
-}
-.equipment-slider_prev-btn, .equipment-slider_next-btn{
-	margin:0 2px;
-	width:40px;
-	height:40px;
-	background:white;
-	border:1px solid rgba(75,85,120,0.5);
-	border-radius:3px;
-	box-shadow:0 1px 3px 0 rgba(159,150,140,0);
-	cursor:pointer;
-	@include transition(all 0.8s $easeOutExpo);
-	&:hover{
-		box-shadow:0 10px 20px 0 rgba(159,150,140,0.4);
+
+// ———————————————————————————————————
+// APPLY CTA
+// ——————————————————————————————————— 
+.apply-cta{
+	background:$blue url("../img/act-logo-bg.png") no-repeat center;
+	background-size:auto 170%;
+	width:100%;
+	color:white;
+	.column{
+		width:auto;
+		&:first-child{
+			margin-right:50px;
+		}
+		&:last-child{
+			margin-left:50px;
+		}
 	}
-	i{
-		color:$orange;
+	.cta-wrap{
+		padding:140px 0;
+		//background:linear-gradient(160deg, $blue 0%, rgba(0,0,0,0) 160%);
+	}
+	p{
+		max-width:600px;
+	}
+	.cta-links{
+		margin-top:20px;
+	}
+	a{
+		display:inline-block;
+		font-size:17px;
+	}
+	.outline-btn{
+		font-weight:800;
+		letter-spacing:-0.05em;
+	}
+	.phone-number{
+		display:block;
+		color:white;
+		font-size:17px;
+		margin-top:15px;
+		text-align:center;
+		span{
+			font-style:italic;
+		}
 	}
 }
+.apply-cta--sm{
+	background: linear-gradient(-90deg, $orange 0%, darken($orange, 15%) 100%);
+	.cta-footer{
+		width:100%;
+		background:url("../img/act-logo-bg.png") no-repeat center;
+		background-size:auto 200%;
+		color:white;
+		p{
+			max-width:550px;
+		}
+		.row{
+			width:100%;
+			flex-direction: row;
+			.col-1-2{
+				width:50%;
+				padding:60px 60px;
+				&:first-child{
+					display:flex;
+					justify-content: flex-end;
+					padding-left:30px;
+				}
+			}
+		}
+	}
+}
+
+// ———————————————————————————————————
+// DRIVER STORIES
+// ——————————————————————————————————— 
+.driver-stories{
+	padding:120px 0;
+	background: linear-gradient(180deg, $blue 0%, $blue_light 150%);
+	--card_size:400px;
+	.card-slider_track{
+		gap:30px;
+	}
+	.card-slider .card{
+	  width:var(--card_size);
+	  height:var(--card_size);
+	  background:white;
+	  border-radius:10px;
+	  color:$blue;
+	  .card_image{
+	  	z-index:1;
+	    display:block;
+	    position:absolute;
+	    bottom:-40px;
+	    right:-10px;
+	    width:75%;
+	    height:auto;
+	    border-radius:10px;
+	    @include transform(scale(1) rotate(-8deg));
+	    @include transition(all 0.8s $easeOutExpo);
+	    will-change: transform;
+	    overflow:hidden;
+	     img{
+		  	display:block;
+		  	width:100%;
+		  	height:auto;
+		  }
+	  }
+	  &:hover{
+	  	background: linear-gradient(180deg, darken($blue, 2%) 0%, darken($blue_light, 16%) 150%);
+	  	.card_image{
+		    @include transform(translateX(10px) scale(0.85) rotate(-5deg));
+		  }
+		  .card-circle{
+			  @include transform(scale(1.5));
+			  @include opacity(1);
+			}
+	  }
+	}
+	.card-slider .card_text{
+	  z-index:2;
+	  position:absolute;
+	  top:0;
+	  left:0;
+	  width:100%;
+	  padding:50px;
+	  //color:white;
+	  h4{
+	    margin-bottom:5px;
+	  }
+	  h5{
+	    z-index:0;
+	    font-weight:700;
+	    font-size:17px;
+	    line-height:1;
+	    letter-spacing:-0.03em;
+	    text-transform:uppercase;
+	    color:$orange;
+	  }
+	}
+	.card_link{
+		z-index:2;
+		position:absolute;
+		bottom:50px;
+		left:50px;
+		.line-btn{
+			font-size:13px;
+		}
+	}
+}
+
+
 
 // ———————————————————————————————————
 // ACT PLAZA
 // ——————————————————————————————————— 
 .plaza{
-	background:url("../img/map-bg-2.jpg") no-repeat top right 40vw;
-	background-size:1000px auto;
-	.plaza-inner{
+	position:relative;
+	padding:160px 0;
+	background:$blue_dark url("../img/blue-benefits.jpg") no-repeat left center;
+	background-size:auto 100%;
+	color:white;
+	--card_size:610px;
+	.plaza_wrap{
+		z-index:2;
 		position:relative;
-	}
-	.container{
-		position:static;
 	}
 	.plaza_text{
-		position:relative;
-		padding:90px 0;
-	}
-	.plaza-slider{
-
-	}
-	.plaza_slides{
-		position:absolute;
-		top:0;
-		left:50%;
-		width:50%;
-		height:100%;
-		background:$blue;
-	}
-	.slick-slide{
-		height:100%;
-		@include opacity(0.3);
-		@include transition(opacity 1.2s $easeOutExpo);
-		img{
-			display:block;
-			width:auto;
-			height:100%;
+		padding-right:30px;
+		p{
+			max-width:450px;
+			color:rgba(255,255,255,0.8);
 		}
 	}
-	.slick-current{
-		@include opacity(1);
+	.plaza_text-inner{
+		padding:120px 0;
+	}
+	.plaza_slider{
+		z-index:2;
+		position:absolute;
+		left:50%;
+		width:50%;
+	}
+	.card-slider_scroll{
+		height:406px;
+	}
+	.card-slider_track{
+	  gap:0;
+	  padding-right:0;
+	}
+	.card-slider .card{
+	  width:var(--card_size);
+	  img{
+	    display:block;
+	    width:100%;
+	    height:auto;
+	  }
+	}
+	.plaza-map{
+		z-index:0;
+		position:absolute;
+		bottom:-120px;
+		left:5%;
+		width:1280px;
+		@media(min-width:1280px){
+			width:1280px;
+		}
+		@media(min-width:1920px){
+			width:1440px;
+		}
+		img{
+			display:block;
+			width:100%;
+			height:auto;
+			@include opacity(0.8);
+		}
 	}
 }
-.slick-slider, .slick-track, .slick-list {
-	height:100%;
-}
-.slider-btns{
-	z-index:2;
-	position:absolute;
-	left:0;
-	bottom:0px;
-	padding:10px 10px 0 0;
-	background:white;
-}
-.prev-btn, .next-btn{
-	margin:0 2px;
-	width:40px;
-	height:40px;
-	background:white;
-	border:1px solid rgba(75,85,120,0.5);
-	border-radius:3px;
-	box-shadow:0 1px 3px 0 rgba(159,150,140,0);
-	cursor:pointer;
-	@include transition(all 0.8s $easeOutExpo);
-	&:hover{
-		box-shadow:0 10px 20px 0 rgba(159,150,140,0.4);
-	}
-	i{
-		color:$orange;
-	}
-}
-// ———————————————————————————————————
-// APPLY CTA
-// ——————————————————————————————————— 
-.apply-cta{
-	background:$blue;
-	color:white;
-	background:$blue url("../img/act-logo-bg.png") no-repeat center;
-	background-size:auto 100%;
-	padding:120px 0;
-	p{
-		max-width:550px;
-		margin-left:auto;
-		margin-right:auto;
-		color:rgba(255,255,255,0.7);
-	}
-}
+
+
 // ———————————————————————————————————
 // BEST FLEETS
 // ——————————————————————————————————— 
 .best-fleets{
-	background:white;
-	padding-top:60px;
+	background:white url("../img/tire-tread-bg.png") no-repeat center top;
+	background-size:30%;
+	padding-top:120px;
 	//padding-bottom:30px;
 	img{
 		margin-bottom:-130px;
@@ -363,6 +567,9 @@
 	}
 	
 }
+
+
+
 
 
 
