--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -1,8 +1,9 @@
 body{
 	font-family: 'Open Sans', sans-serif;
-	font-weight:500;
-	font-size:18px;
+	font-weight:400;
+	font-size:17px;
 	color:$blue;
+	min-width:1280px;
 }
 main{
 	//padding-top:110px;
@@ -10,161 +11,82 @@ main{
 // ——————————————————————————
 // HEADER
 // ——————————————————————————
+
 header{
 	position:fixed;
 	z-index:99;
 	top:0;
 	width:100%;
-	min-width:960px;
-	height:110px;
-	background:white;
-	box-shadow:$shadow_header;
-	@include transition(transform 1.2s $easeOutExpo);
+	min-width:1280px;
+	height:140px;
+	background:transparent;
+	will-change: transform;
+	box-shadow:0 0 20px 0 rgba(0,0,0,0);
+	@include transition(all 0.8s $easeOutExpo);
 	&.hide{
-		@include transform(translate3d(0,-125px,0));
+		transform: translate3d(0,-90px,0);
 	}
-	> .container{
+	&.active{
+		height:90px;
+		background:white;
+		box-shadow:0 0 20px 0 rgba(0,0,0,0.3);
+		#logo{
+			#tail{
+				fill:$blue;
+			}
+		}
+		nav.nav-header{
+			a{
+				color:$blue;
+			}
+		}
+		.phone-header{
+			a{
+				color:$blue;
+			}
+		}
+	}
+	.container{
 		height:100%;
 	}
 	.logo-header{
 		padding-top:20px;
 	}
+	#logo{
+		width:94px;
+		height:auto;
+		@include transition(all 0.6s $easeOutExpo);
+	}
 	nav.nav-header{
 		margin-left:40px;
 		.nav-header_link{
+			position:relative;
 			display:inline-block;
-			> a{
-				position:relative;
-				display:inline-block;
-				line-height:60px;
-				font-weight:600;
-				letter-spacing:-0.5px;
-				color:$blue;
-				margin: 0 40px 0 0;
-				@include transition(color 0.8s $easeOutExpo);
-				&:after{
-					z-index:2;
-					content:"";
-					position:absolute;
-					display:none;
-					width:100%;
-					height:5px;
-					background:$orange;
-          bottom:10px;
-				}
+			height:30px;
+			margin: 0 40px 0 0;
+			&:after{
+				z-index:2;
+				content:"";
+				position:absolute;
+				display:none;
+				width:100%;
+				height:2px;
+				background:$orange;
+        bottom:2px;
 			}
 			&:hover{
-				> a{
-					&:after{
-						display:block;
-					}
-				}
-				.nav-header_sub-menu{
-					display:table;
-				}
-			}
-			.has-sub-menu{
-				position:relative;
-			}
-			.nav-header_sub-menu{
-				z-index:1;
-				display: none;
-				position:absolute;
-				top:75px;
-				padding:30px 0;
-				margin-left:-40px;
-				border:1px solid rgba(97,107,123,0.2);
-				background:white;
-				border-radius:6px;
-				box-shadow:$shadow_menu;
-				.nav-header_sub-menu-col{
-					display:table-cell;
-					border-right:1px solid #ddd;
-					padding:0 40px;
-					&:first-child{
-						//padding:0 30px 0 10px;
-					}
-					&:last-child{
-						border:none;
-					}
-				}
-				.nav-header_sub-menu-col_heading{
+				&:after{
 					display:block;
-					font-weight:600;
-					font-style:italic;
-					color:$orange;
-					margin-bottom:5px;
-				}
-				.nav-header_sub-menu-col_cta{
-					p{
-						padding-top:6px;
-						line-height:1.4;
-						max-width:260px;
-						i{
-							font-size:22px;
-							color:$orange;
-						}
-					}
-				}
-				a{
-					display:block;
-					font-size:18px;
-				  line-height:1;
-				  letter-spacing:-0.5px;
-				  margin:0;
-				  padding:10px 12px;
-				  margin-left:-12px;
-				  color:$gray;
-				  &:first-child{
-				  	margin-top:0;
-				  }
-				  &:hover{
-				  	background:$gray_light;
-				  	color:$blue;
-				  }
-				  i{
-				  	color:$orange;
-						font-size:21px;
-						margin-left:10px;
-						vertical-align:-2px;
-				  }
-				}
-				a.basic-btn{
-					display:inline-block;
-					padding:0;
-					margin-top:12px;
-					margin-left:0;
-					color:$blue;
-					// font-size:17px;
-					i{
-						font-size:18px;
-						margin-left:5px;
-					}
-					&:hover{
-						background:transparent;
-						color:darken($orange,  7%);
-					}
-				}
-				.apply-btn{
-					display:inline-block;
-					text-align:center;
-					padding:0 30px;
-					margin-top:20px;
-					margin-left:0;
-					font-size:20px;
-					line-height:50px;
-					font-weight:700;
-					letter-spacing:-1px;
-					background:$orange;
-					color:white;
-					border-radius:3px;
-					@include transition(background 0.6s $easeOutExpo);
-					&:hover{
-						background:darken($orange, 7%);
-						color:white;
-					}
 				}
 			}
+		}
+		a{
+			display:inline-block;
+			line-height:30px;
+			font-weight:600;
+			letter-spacing:-0.5px;
+			color:white;
+			@include transition(color 0.8s $easeOutExpo);
 		}
 	}
 	.apply-header{
@@ -175,23 +97,11 @@ header{
 	}
 	.phone-header{
 		position:relative;
-		height:40px;
-		font-size:18px;
-		line-height:40px;
+		font-size:17px;
 		font-weight:600;
 		margin-right: 30px;
-		span{
-			font-style:italic;
-			font-size:14px;
-			margin-right:10px;
-			font-weight:600;
-		}
 		a{
-			color:$blue;
-		}
-		i{
-			font-size:10px;
-			vertical-align:0px;
+			color:white;
 		}
 	}
 }
@@ -215,20 +125,22 @@ header{
 // ——————————————————————————
 footer{
 	padding:170px 0 90px 0;
-	background:$blue;
+	background:#ebebeb;
 	.column{
 		width:auto;
 	}
 	.footer-top-row{
 		height:50px;
-		line-height:50px;
 		margin-bottom:40px;
 		a{
-			color:white;
+			color:$blue;
 			font-size:20px;
-			letter-spacing:-1px;
-			&:hover{
-				color:$orange;
+			font-weight:700;
+			letter-spacing:-0.03em;
+			&.apply-btn{
+				color:white;
+				font-size:15px;
+				font-weight:800;
 			}
 		}
 	}
@@ -237,7 +149,7 @@ footer{
 		i{
 			position:absolute;
 			font-size:20px;
-			color:$orange;
+			color:$gray;
 			top:15px;
 			left:20px;
 		}
@@ -251,7 +163,7 @@ footer{
 			letter-spacing:-0.5px;
 			padding-left:55px;
 			color:$gray;
-			border:1px solid rgba(75,85,120,0.5);
+			border:1px solid rgba(75,85,120,0.25);
 			border-radius:3px;
 			box-shadow:0 8px 16px 0 rgba(0,0,0,0);
 			cursor:pointer;
@@ -271,13 +183,13 @@ footer{
 	}
 	.footer-menu-heading{
 		font-size:18px;
-		font-weight:600;
+		font-weight:700;
 		margin-bottom:10px;
-		color:white;
+		color:$blue;
 	}
 	.footer-menu{
 		a{
-			color:rgba(255,255,255,0.7);
+			color:$blue;;
 			font-size:17px;
 			line-height:30px;
 			letter-spacing:-0.5px;
@@ -292,11 +204,11 @@ footer{
 
 	}
 	.footer-bottom_copyright{
-		color:rgba(255,255,255,0.7);
+		color:$gray;
 
 	}
 	.footer-bottom_links a{
-		color:rgba(255,255,255,0.7);
+		color:$gray;
 		margin-left:30px;
 		&:hover{
 			text-decoration:underline;
@@ -308,22 +220,59 @@ footer{
 .apply-btn{
 	display:inline-block;
 	text-align:center;
-	padding:0 30px;
-	height:50px;
-	font-size:20px;
-	line-height:50px;
-	font-weight:700;
-	letter-spacing:-1px;
+	padding:1em 3em;
+	font-size:15px;
+	font-weight:800;
+	letter-spacing:-0.06em;
+	text-transform:uppercase;
 	background:$orange;
 	color:white;
-	border-radius:3px;
-	@include transition(background 0.6s $easeOutExpo);
+	//border-radius:6px;
+	@include transition(all 0.6s $easeOutExpo);
 	&:hover{
 		background:darken($orange, 7%);
 		color:white;
 	}
 }
-.primary-btn{
+.outline-btn{
+	position:relative;
+	display:inline-block;
+	text-align: center;
+	padding:1em 3em;
+	font-size:14px;
+	font-weight:700;
+	text-transform: uppercase;
+	border:1px solid rgba(255,255,255,0.6);
+	//border-radius:6px;
+	color:white;
+	@include transition(all 0.6s $easeOutExpo);
+	&:hover{
+		border-color:white;
+	}
+}
+
+.line-btn{
+	position:relative;
+	display:inline-block;
+	text-align: center;
+	padding:1em 3em;
+	font-size:14px;
+	font-weight:700;
+	text-transform: uppercase;
+	border:1px solid rgba(255,255,255,0.6);
+	//border-radius:6px;
+	color:white;
+	@include transition(all 0.6s $easeOutExpo);
+	i{
+		font-size:8px;
+		vertical-align:2px;
+		margin-left:8px;
+	}
+	&:hover{
+		border-color:white;
+	}
+}
+.primary_btn{
 	display:inline-block;
 	height:50px;
 	line-height:48px;
@@ -333,13 +282,12 @@ footer{
 	padding:0 30px;
 	color:$blue;
 	background:white;
-	border:1px solid rgba(75,85,120,0.5);
-	border-radius:3px;
-	box-shadow:0 8px 16px 0 rgba(0,0,0,0);
+	//border-radius:3px;
+	box-shadow:0 2px 4px 0 rgba(0,0,0,0.2);
 	cursor:pointer;
 	@include transition(all 0.8s $easeOutExpo);
 	&:hover{
-		box-shadow:0 8px 16px 0 rgba(0,0,0,0.2);
+		box-shadow:0 8px 16px 0 rgba(0,0,0,0.5);
 	}
 	i{
 		color:$orange;
@@ -360,35 +308,43 @@ footer{
 
 .button-group{
 	.btn{
-		display:inline-block;
-		margin:0 3px;
+		margin:0 5px 0 0;
+		&:last-child{
+			margin:0;
+		}
 	}
 }
 
 .video-play_btn{
-	z-index:4;
-	position:absolute;
-	top:50%;
-	left:50%;
-	@include transform(translate3d(-50%,-50%,0));
-	width:70px;
-	height:70px;
-	padding-top:25px;
+	position:relative;
+	width:50px;
+	height:50px;
+	line-height:48px;
+	text-align:center;
+	vertical-align:middle;
+	font-size:14px;
+	font-weight:700;
+	text-transform: uppercase;
+	color:white;
 	cursor: pointer;
 	&:hover{
 		.video-play_btn-circle{
 			@include transform(scale(1.1));
+			border-color:white;
 		}
 	}
 }
 .video-play_btn-circle{
-	width:70px;
-	height:70px;
-	border:3px solid white;
+	display:inline-block;
+	margin-left:6px;
+	width:50px;
+	height:50px;
+	border:1px solid rgba(255,255,255,0.6);
 	border-radius:100%;
-	@include transition(transform 0.8s $easeOutExpo);
+	@include transition(all 0.8s $easeOutExpo);
 	i{
-		font-size:18px;
+		font-size:10px;
+		vertical-align:1px;
 		color:white;
 	}
 }
