--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -9,7 +9,8 @@ $easeOutExpo:cubic-bezier(0.19, 1, 0.22, 1);
 $blue:#1d4485; //1f4491
 $gray:#616b7b; 
 
-$orange:#f5832d;
+$orange:#fe8021;
+$blue_dark:#0e2342;
 $blue_med:#4384be;
 $blue_light:#64aedf;
 
